# chatroom

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  c.sh  clangdcheck.sh  clearlog.sh  config.json  month6.md  package.json  s  server.out  tempCMakeLists.txt
.github/: c-linter.sh  format.sh
.github/workflows/: clang-tidy.yml  clang.yml  cmake.yml  codeql-analysis.yml  format.yml  formate.yml  tidy.yml
client/: CMakeLists.txt  cli.chat.c  cli_UI.c  cli_accesspasswd.c  cli_accesspassword.c  cli_accessusername.c  cli_base.c  cli_chat.c  cli_file.c  cli_friends.c  cli_group.c  cli_login.c  cli_register.c  cli_sql_if.c  client.c  clienthelp.c  config.h  menu.c  move.c  showmainmenu.c  signalcatch.c  useronline.c
dorc/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  README_8md.html  annotated.html  annotated_dup.js  cJSON_8h.html  cJSON_8h.js  cJSON_8h__incl.map  cJSON_8h__incl.md5  cJSON_8h_source.html  classes.html  cli_8h.html  cli_8h.js  cli_8h__incl.map  cli_8h__incl.md5  cli_8h_a35a1a50711b522be68a3945d8db38620_cgraph.map  cli_8h_a35a1a50711b522be68a3945d8db38620_cgraph.md5  cli_8h_a35a1a50711b522be68a3945d8db38620_icgraph.map  cli_8h_a35a1a50711b522be68a3945d8db38620_icgraph.md5  cli_8h_ad0b5f627bbf384d6b82bba6cd00ee72e_icgraph.map  cli_8h_afe8783461c8e26b0f1ffc643686359e1_cgraph.map  cli_8h_afe8783461c8e26b0f1ffc643686359e1_cgraph.md5  cli_8h_afe8783461c8e26b0f1ffc643686359e1_icgraph.map  cli_8h_afe8783461c8e26b0f1ffc643686359e1_icgraph.md5  cli_8h_source.html  client_8c.html  client_8c.js  client_8c__incl.map  client_8c__incl.md5  client__event_8c.html  client__event_8c.js  client__event_8c__incl.map  client__event_8c__incl.md5  client__event_8c_a18cd6fc1059d33dbd66cf0259a7732e5_cgraph.map  client__event_8c_a18cd6fc1059d33dbd66cf0259a7732e5_cgraph.md5  client__event_8c_a18cd6fc1059d33dbd66cf0259a7732e5_icgraph.map  client__event_8c_a18cd6fc1059d33dbd66cf0259a7732e5_icgraph.md5  color_8h.html  color_8h.js  color_8h__dep__incl.map  (+193 more)
dorc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  defines_e.js  enums_0.js  (+42 more)
html/: index.html  md_README.html  md_month6.html  navtreedata.js  navtreeindex0.js  pages.html
html/search/: all_0.js  all_2.js  files_0.js  pages_0.js  pages_1.js  searchdata.js
include/: cJSON.h  chat.h  cli.h  color.h  common.h  sdebug.info.h  ser.h  wrap.h  zlog.h
include/mysql/: mariadb_version.h
include/mysql/server/: my_config.h  mysql_version.h
include/mysql/server/private/: source_revision.h
lib/cjson/: libcjson_utils.so.1
log/: s.log.conf
rely/: cliconfig.json  config.h.in  recv&send.bak  s.log.conf.in  serconfig.json
rely/func/: client_event.c  creat_daemon.c  epoll_add.c  epoll_init_lfd.c  epoll_set.c  event_del.c  justwrite.c  lfdaccept.c  my_zlog_init.c  serverhelp.c  setconfig.c  showevents.c
rely/includec/: wrap.c
server/: CMakeLists.txt  client_event.c  config.h  do_file.c  do_sql.c  epoll_add.c  epoll_set.c  epoll_setting.c  event_del.c  friends.c  group.c  justwrite.c  lfdaccept.c  ser_accessusername.c  ser_base.c  server.c  showevents.c  sql_connect.c  sql_do.c  sql_init_table.c  sql_ready.c
src/: a.c  cli_accessusername.c  client_event.c  clienthelp.c  config.h  config.h.gch  creat_daemon.c  epoll_add.c  epoll_init_lfd.c  epoll_set.c  event_del.c  help.c  id_to_name.c  justwrite.c  lfdaccept.c  my_signal.c  my_zlog_init.c  recv&send_info.c  recv_info.c  recv_send_info.c  send_info.c  serverhelp.c  setconfig.c  setserconfig.c  show_errno.c  show_errno_signal.c  show_signal.c  showevents.c  showinfo.c  signalcatch.c  sql_connect.c  sql_init_table.c  wrap.c
